[tool.poetry]
name = "i-love-templates"
version = "0.1.0"
description = ""
authors = ["lishanda"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "^2.3.1"
sphinx-autodoc-typehints = "^1.10.3"
pygments = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
